# easytlv

./: .gitignore  LICENSE  README.md  easytlv.c  easytlv.h
test/: CMakeLists.txt  easytlv_debug.h  test.c
